feat: add 增加拖拽功能

--- a/src/components/RigthPanel/index.less
+++ b/src/components/RigthPanel/index.less
@@ -7,5 +7,14 @@
   .header {
     height: 40px;
     line-height: 40px;
+    text-align: center;
+    font-size: 18px;
+  }
+  .container {
+    padding: 12px 18px 15px 15px;
+    .ant-form-item-label > label {
+      font-size: 14px;
+      color: #606266;
+    }
   }
 }
