feat: add 增加左侧属性编辑

--- a/src/components/RigthPanel/index.less
+++ b/src/components/RigthPanel/index.less
@@ -16,5 +16,13 @@
       font-size: 14px;
       color: #606266;
     }
+    .title {
+      text-align: center;
+      height: 32px;
+      line-height: 32px;
+      border-top: 1px solid lightgrey;
+      font-size: 18px;
+      margin-bottom: 16px;
+    }
   }
 }
