--- a/src/pages/FormEdit/components/RigthPanel/components/SetComponent/index.less
+++ b/src/pages/FormEdit/components/RigthPanel/components/SetComponent/index.less
@@ -1,9 +1,5 @@
-.right-panel {
-  width: 350px;
-  position: absolute;
-  right: 0;
-  top: 0;
-  height: 100vh;
+.set-component {
+  width: 100%;
   .header {
     height: 40px;
     line-height: 40px;
