feat: add 增加处理函数

--- a/src/pages/FormEdit/LeftMaterial/index.less
+++ b/src/pages/FormEdit/LeftMaterial/index.less
@@ -18,6 +18,9 @@
     font-size: 14px;
     padding: 0 10px;
     border-right: 1px solid #f1e8e8;
+    .cantanier-type {
+      margin-bottom: 24px;
+    }
     .material-title {
       height: 20px;
       line-height: 20px;
